--- a/MenuMate/Services/ServicesApp/PaymentSenseIntegration/PaymentSenseIntegration.csproj
+++ b/MenuMate/Services/ServicesApp/PaymentSenseIntegration/PaymentSenseIntegration.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,12 +41,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domain\AuthorizationDetails.cs" />
+    <Compile Include="Domain\CardTerminal.cs" />
+    <Compile Include="Domain\PaymentSenseResponse.cs" />
+    <Compile Include="Domain\TransactionData.cs" />
+    <Compile Include="Enums\TransactionResult.cs" />
+    <Compile Include="Enums\TransactionType.cs" />
     <Compile Include="PaymentSenseConstraints.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Domain\" />
-    <Folder Include="Enums\" />
     <Folder Include="Tools\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
