--- a/MenuMate/Services/ServicesApp/PaymentSenseIntegration/PaymentSenseIntegration.csproj
+++ b/MenuMate/Services/ServicesApp/PaymentSenseIntegration/PaymentSenseIntegration.csproj
@@ -31,8 +31,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="NLog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http">
+      <HintPath>..\packages\Microsoft.Net.Http.2.2.29\lib\net40\System.Net.Http.dll</HintPath>
+    </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,17 +50,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Domain\AuthorizationDetails.cs" />
-    <Compile Include="Domain\CardTerminal.cs" />
+    <Compile Include="Domain\PACTerminal.cs" />
+    <Compile Include="Domain\PACTerminalWrapper.cs" />
     <Compile Include="Domain\PaymentSenseResponse.cs" />
+    <Compile Include="Domain\ReceiptData.cs" />
+    <Compile Include="Domain\ReceiptLines.cs" />
     <Compile Include="Domain\TransactionData.cs" />
+    <Compile Include="Domain\TransactionRequest.cs" />
     <Compile Include="Enums\TransactionResult.cs" />
     <Compile Include="Enums\TransactionType.cs" />
-    <Compile Include="PaymentSenseConstraints.cs" />
+    <Compile Include="PaymentSenseIntegrationController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools\ServiceLogger.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Tools\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
