--- a/MenuMate/Services/ServicesApp/PaymentSenseIntegration/PaymentSenseIntegration.csproj
+++ b/MenuMate/Services/ServicesApp/PaymentSenseIntegration/PaymentSenseIntegration.csproj
@@ -49,16 +49,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Domain\AuthorizationDetails.cs" />
-    <Compile Include="Domain\PACTerminal.cs" />
-    <Compile Include="Domain\PACTerminalWrapper.cs" />
-    <Compile Include="Domain\PaymentSenseResponse.cs" />
-    <Compile Include="Domain\ReceiptData.cs" />
-    <Compile Include="Domain\ReceiptLines.cs" />
-    <Compile Include="Domain\TransactionDataResponse.cs" />
-    <Compile Include="Domain\TransactionRequest.cs" />
-    <Compile Include="Enums\TransactionResult.cs" />
-    <Compile Include="Enums\TransactionType.cs" />
+    <Compile Include="Domain\AuthorizationAndTerminalData\AuthorizationDetails.cs" />
+    <Compile Include="Domain\AuthorizationAndTerminalData\PACTerminal.cs" />
+    <Compile Include="Domain\AuthorizationAndTerminalData\PACTerminalWrapper.cs" />
+    <Compile Include="Domain\ResponseData\PostRequestResponse.cs" />
+    <Compile Include="Domain\ResponseData\ReceiptData.cs" />
+    <Compile Include="Domain\ResponseData\ReceiptLines.cs" />
+    <Compile Include="Domain\RequestData\Reports.cs" />
+    <Compile Include="Domain\ResponseData\TransactionDataResponse.cs" />
+    <Compile Include="Domain\RequestData\TransactionRequest.cs" />
     <Compile Include="PaymentSenseIntegrationController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\ServiceLogger.cs" />
