--- a/MenuMate/Services/ServicesApp/MenumateServices/App.config
+++ b/MenuMate/Services/ServicesApp/MenumateServices/App.config
@@ -13,8 +13,7 @@
   <system.serviceModel>
     <services>
       <service behaviorConfiguration="ServiceWebMateBehavior" name="MenumateServices.WCFServices.WCFServiceWebMate">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration"
-          name="basicHttpBinding_ServiceWebMate" contract="MenumateServices.WCFServices.IWCFServiceWebMate">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration" name="basicHttpBinding_ServiceWebMate" contract="MenumateServices.WCFServices.IWCFServiceWebMate">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -27,8 +26,7 @@
         </host>
       </service>
       <service behaviorConfiguration="ServiceLoyaltyMateBehavior" name="MenumateServices.WCFServices.WCFServiceLoyaltyMate">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration"
-          name="basicHttpBinding_ServiceLoyaltyMate" contract="MenumateServices.WCFServices.IWCFServiceLoyaltyMate">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration" name="basicHttpBinding_ServiceLoyaltyMate" contract="MenumateServices.WCFServices.IWCFServiceLoyaltyMate">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -41,8 +39,7 @@
         </host>
       </service>
       <service behaviorConfiguration="ServiceSmartLinkBehavior" name="MenumateServices.WCFServices.WCFServiceSmartLink">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration"
-          name="basicHttpBinding_ServiceSmartLink" contract="MenumateServices.WCFServices.IWCFServiceSmartLink">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration" name="basicHttpBinding_ServiceSmartLink" contract="MenumateServices.WCFServices.IWCFServiceSmartLink">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -54,10 +51,8 @@
           </baseAddresses>
         </host>
       </service>
-      <service behaviorConfiguration="ServicePocketVoucherBehavior"
-        name="MenumateServices.WCFServices.PocketVoucherWebService">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration"
-          name="basicHttpBinding_ServicePocketVoucher" contract="MenumateServices.WCFServices.IPocketVoucherWebService">
+      <service behaviorConfiguration="ServicePocketVoucherBehavior" name="MenumateServices.WCFServices.PocketVoucherWebService">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration" name="basicHttpBinding_ServicePocketVoucher" contract="MenumateServices.WCFServices.IPocketVoucherWebService">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -70,8 +65,7 @@
         </host>
       </service>
       <service behaviorConfiguration="ServiceSalesForceBehavior" name="MenumateServices.WCFServices.SalesForceIntegrationWebService">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration"
-          name="basicHttpBinding_ServiceSalesForce" contract="MenumateServices.WCFServices.ISalesForceIntegrationWebService">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration" name="basicHttpBinding_ServiceSalesForce" contract="MenumateServices.WCFServices.ISalesForceIntegrationWebService">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -83,10 +77,8 @@
           </baseAddresses>
         </host>
       </service>
-      <service behaviorConfiguration="ServiceWalletPaymentsBehavior"
-        name="MenumateServices.WCFServices.WCFServiceWalletPayments">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration"
-          name="basicHttpBinding_ServiceWalletPayments" contract="MenumateServices.WCFServices.IWCFServiceWalletPayments">
+      <service behaviorConfiguration="ServiceWalletPaymentsBehavior" name="MenumateServices.WCFServices.WCFServiceWalletPayments">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration" name="basicHttpBinding_ServiceWalletPayments" contract="MenumateServices.WCFServices.IWCFServiceWalletPayments">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -99,8 +91,7 @@
         </host>
       </service>
       <service behaviorConfiguration="ServiceSiHotBehavior" name="MenumateServices.WCFServices.SiHotIntegrationWebService">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration"
-          name="basicHttpBinding_ServiceSiHot" contract="MenumateServices.WCFServices.ISiHotIntegrationWebService">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration" name="basicHttpBinding_ServiceSiHot" contract="MenumateServices.WCFServices.ISiHotIntegrationWebService">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -112,10 +103,8 @@
           </baseAddresses>
         </host>
       </service>
-      <service behaviorConfiguration="ServiceSmartConnectBehavior"
-        name="MenumateServices.WCFServices.WCFServiceSmartConnect">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration"
-          name="basicHttpBinding_ServiceSmartConnect" contract="MenumateServices.WCFServices.IWCFSmartConnect">
+      <service behaviorConfiguration="ServiceSmartConnectBehavior" name="MenumateServices.WCFServices.WCFServiceSmartConnect">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration" name="basicHttpBinding_ServiceSmartConnect" contract="MenumateServices.WCFServices.IWCFSmartConnect">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -140,10 +129,8 @@
           </baseAddresses>
         </host>
       </service>      
-      <service behaviorConfiguration="ServicePaymentSenseBehavior"
-		name="MenumateServices.WCFServices.WCFServicePaymentSense">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration"
-          name="basicHttpBinding_ServicePaymentSense" contract="MenumateServices.WCFServices.IWCFServicePaymentSense">
+      <service behaviorConfiguration="ServicePaymentSenseBehavior" name="MenumateServices.WCFServices.WCFServicePaymentSense">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration" name="basicHttpBinding_ServicePaymentSense" contract="MenumateServices.WCFServices.IWCFServicePaymentSense">
           <identity>
             <dns value="localhost" />
           </identity>
