--- a/OracleTCPServer/OracleTCPServer/OracleTCPServer.csproj
+++ b/OracleTCPServer/OracleTCPServer/OracleTCPServer.csproj
@@ -85,12 +85,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LogsUtility.cs" />
-    <Compile Include="OracleDBConnection.cs" />
-    <Compile Include="OracleDetails.cs" />
-    <Compile Include="OracleServerDB.cs" />
+    <Compile Include="Objects\LinkDescription.cs" />
+    <Compile Include="Utility\LogsUtility.cs" />
+    <Compile Include="Database\OracleDBConnection.cs" />
+    <Compile Include="Objects\OracleDetails.cs" />
+    <Compile Include="Database\OracleServerDB.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility\XMLHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
