--- a/FiscalLibrary/ClassLibrary1/packages.config
+++ b/FiscalLibrary/ClassLibrary1/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="POSForDotNet.SDK" version="1.14.1" targetFramework="net46" />
 </packages>
