--- a/FiscalLibrary/FiscalPrinterIntegration/FiscalPrinterIntegration.csproj
+++ b/FiscalLibrary/FiscalPrinterIntegration/FiscalPrinterIntegration.csproj
@@ -33,9 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.PointOfService, Version=1.11.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\..\Windows\assembly\GAC_MSIL\Microsoft.PointOfService\1.11.0.0__31bf3856ad364e35\Microsoft.PointOfService.dll</HintPath>
+    <Reference Include="Microsoft.PointOfService">
+      <HintPath>..\..\Static Files\Microsoft.PointOfService.dll</HintPath>
     </Reference>
     <Reference Include="NLog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL" />
     <Reference Include="System" />
