Branch_MM-120969 binding items font size , color with new settings. Later will remove the converter for sizes.

--- a/ChefMate/Chefmate.Database/Chefmate.Database.csproj
+++ b/ChefMate/Chefmate.Database/Chefmate.Database.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Parser\ChefmateParserVersion1_1.cs" />
     <Compile Include="Parser\ChefmateParserVersion1_2.cs" />
     <Compile Include="Parser\ChefmateParserVersion1_3.cs" />
+    <Compile Include="Parser\ChefmateParserVersion1_4.cs" />
     <Compile Include="Parser\ParserFactory.cs" />
     <Compile Include="Parser\VersionParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
