--- a/MenuMate/Services/ServicesApp/Loyaltymate/Loyaltymate.csproj
+++ b/MenuMate/Services/ServicesApp/Loyaltymate/Loyaltymate.csproj
@@ -56,10 +56,12 @@
     <Compile Include="Enum\ImplicationType.cs" />
     <Compile Include="Enum\MemberType.cs" />
     <Compile Include="Enum\MenuType.cs" />
+    <Compile Include="Enum\OrderContainerType.cs" />
     <Compile Include="Enum\PointType.cs" />
     <Compile Include="Enum\ProductPriority.cs" />
+    <Compile Include="Enum\SiteSettingType.cs" />
     <Compile Include="Enum\TaxProfileType.cs" />
-    <Compile Include="Enum\TaxSettingsType.cs" />
+    <Compile Include="Enum\UserType.cs" />
     <Compile Include="Exceptions\AuthenticationFailedException.cs" />
     <Compile Include="Exceptions\CustomException.cs" />
     <Compile Include="Exceptions\LoyaltymateOperationException.cs" />
@@ -92,6 +94,12 @@
     <Compile Include="Model\OnlineOrderingModel\MenuModels\ApiSideGroupViewModel.cs" />
     <Compile Include="Model\OnlineOrderingModel\MenuModels\ApiSiteItemViewModel.cs" />
     <Compile Include="Model\OnlineOrderingModel\MenuModels\ApiSiteMenuViewModel.cs" />
+    <Compile Include="Model\OnlineOrderingModel\OrderModels\OrderItemSizeDiscountViewModel.cs" />
+    <Compile Include="Model\OnlineOrderingModel\OrderModels\OrderItemSizeTaxProfileViewModel.cs" />
+    <Compile Include="Model\OnlineOrderingModel\OrderModels\OrderItemSizeViewModelViewModel.cs" />
+    <Compile Include="Model\OnlineOrderingModel\OrderModels\OrderItemViewModel.cs" />
+    <Compile Include="Model\OnlineOrderingModel\OrderModels\SiteOrderTypeInfoViewModel.cs" />
+    <Compile Include="Model\OnlineOrderingModel\OrderModels\SiteOrderViewModel.cs" />
     <Compile Include="Model\OnlineOrderingModel\TaxSettingModels\ApiSiteTaxSettings.cs" />
     <Compile Include="Model\OnlineOrderingModel\TaxSettingModels\ApiTaxSettings.cs" />
     <Compile Include="Model\PointQuery.cs" />
