Branch_MM-123186 order processing in progress.

--- a/MenuMate/Services/ServicesApp/Loyaltymate/Loyaltymate.csproj
+++ b/MenuMate/Services/ServicesApp/Loyaltymate/Loyaltymate.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Sevices\ILoyaltymateService.cs" />
     <Compile Include="Sevices\LoyaltymateService.cs" />
     <Compile Include="Sevices\RequestAddress.cs" />
+    <Compile Include="Tools\ServiceLogger.cs" />
     <Compile Include="Utility\JsonUtility.cs" />
     <Compile Include="Utility\WebUtility.cs" />
   </ItemGroup>
