--- a/MenuMate/Services/ServicesApp/MenumateServices/MenumateServices.csproj
+++ b/MenuMate/Services/ServicesApp/MenumateServices/MenumateServices.csproj
@@ -197,15 +197,15 @@
     <Compile Include="DTO\LoyaltyMate\VoucherTransactionInfo.cs" />
     <Compile Include="DTO\LoyaltyMate\VoucherTransactionResponse.cs" />
     <Compile Include="DTO\OnlineOrdering\CourseInfo.cs" />
-    <Compile Include="DTO\OnlineOrdering\DBOrder.cs" />
+    <Compile Include="DTO\OnlineOrdering\DBOrders\DBOrder.cs" />
+    <Compile Include="DTO\OnlineOrdering\DBOrders\OnlineOrderDB.cs" />
+    <Compile Include="DTO\OnlineOrdering\DBOrders\OnlineOrderDBConnection.cs" />
+    <Compile Include="DTO\OnlineOrdering\DBOrders\OnlineOrderDBQueries.cs" />
+    <Compile Include="DTO\OnlineOrdering\DBOrders\OrderAttributes.cs" />
     <Compile Include="DTO\OnlineOrdering\ItemSideInfo.cs" />
     <Compile Include="DTO\OnlineOrdering\ItemSizeInfo.cs" />
     <Compile Include="DTO\OnlineOrdering\ItemSizeTaxProfileInfo.cs" />
     <Compile Include="DTO\OnlineOrdering\MenuConsumableInfo.cs" />
-    <Compile Include="DTO\OnlineOrdering\OnlineOrderDB.cs" />
-    <Compile Include="DTO\OnlineOrdering\OnlineOrderDBConnection.cs" />
-    <Compile Include="DTO\OnlineOrdering\OnlineOrderDBQueries.cs" />
-    <Compile Include="DTO\OnlineOrdering\OrderAttributes.cs" />
     <Compile Include="DTO\OnlineOrdering\SideGroupInfo.cs" />
     <Compile Include="DTO\OnlineOrdering\SiteItemInfo.cs" />
     <Compile Include="DTO\OnlineOrdering\SiteMenuInfo.cs" />
