--- a/MenuMate/Services/ServicesApp/MenumateServices/MenumateServices.csproj
+++ b/MenuMate/Services/ServicesApp/MenumateServices/MenumateServices.csproj
@@ -177,8 +177,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DTO\Enum\MenuType.cs" />
+    <Compile Include="DTO\Enum\OrderContainerType.cs" />
+    <Compile Include="DTO\Enum\OrderType.cs" />
     <Compile Include="DTO\Enum\TaxProfileType.cs" />
     <Compile Include="DTO\Enum\SiteSettingType.cs" />
+    <Compile Include="DTO\Enum\UserType.cs" />
     <Compile Include="DTO\LoyaltyMate\LoyaltyMemberListResponse.cs" />
     <Compile Include="DTO\LoyaltyMate\LoyaltyPointsInfoResponse.cs" />
     <Compile Include="DTO\LoyaltyMate\LoyaltyTierListResponse.cs" />
@@ -206,6 +209,12 @@
     <Compile Include="DTO\OnlineOrdering\ItemSizeInfo.cs" />
     <Compile Include="DTO\OnlineOrdering\ItemSizeTaxProfileInfo.cs" />
     <Compile Include="DTO\OnlineOrdering\MenuConsumableInfo.cs" />
+    <Compile Include="DTO\OnlineOrdering\OrderModels\OrderItemSizeDiscountModel.cs" />
+    <Compile Include="DTO\OnlineOrdering\OrderModels\OrderItemSizeTaxProfileModel.cs" />
+    <Compile Include="DTO\OnlineOrdering\OrderModels\OrderItemSizeViewModel.cs" />
+    <Compile Include="DTO\OnlineOrdering\OrderModels\OrderItemModel.cs" />
+    <Compile Include="DTO\OnlineOrdering\OrderModels\SiteOrderTypeInfoModel.cs" />
+    <Compile Include="DTO\OnlineOrdering\OrderModels\SiteOrderModel.cs" />
     <Compile Include="DTO\OnlineOrdering\SideGroupInfo.cs" />
     <Compile Include="DTO\OnlineOrdering\SiteItemInfo.cs" />
     <Compile Include="DTO\OnlineOrdering\SiteMenuInfo.cs" />
