Branch_MM-123186 readded files.

--- a/MenuMate/Services/ServicesApp/MenumateServices/MenumateServices.csproj
+++ b/MenuMate/Services/ServicesApp/MenumateServices/MenumateServices.csproj
@@ -199,27 +199,27 @@
     <Compile Include="DTO\LoyaltyMate\VoucherInfo.cs" />
     <Compile Include="DTO\LoyaltyMate\VoucherTransactionInfo.cs" />
     <Compile Include="DTO\LoyaltyMate\VoucherTransactionResponse.cs" />
-    <Compile Include="DTO\OnlineOrdering\CourseInfo.cs" />
+    <Compile Include="DTO\OnlineOrdering\MenuModels\CourseInfo.cs" />
     <Compile Include="DTO\OnlineOrdering\DBOrders\DBOrder.cs" />
     <Compile Include="DTO\OnlineOrdering\DBOrders\OnlineOrderDB.cs" />
     <Compile Include="DTO\OnlineOrdering\DBOrders\OnlineOrderDBConnection.cs" />
     <Compile Include="DTO\OnlineOrdering\DBOrders\OnlineOrderDBQueries.cs" />
     <Compile Include="DTO\OnlineOrdering\DBOrders\OrderAttributes.cs" />
-    <Compile Include="DTO\OnlineOrdering\ItemSideInfo.cs" />
-    <Compile Include="DTO\OnlineOrdering\ItemSizeInfo.cs" />
-    <Compile Include="DTO\OnlineOrdering\ItemSizeTaxProfileInfo.cs" />
-    <Compile Include="DTO\OnlineOrdering\MenuConsumableInfo.cs" />
+    <Compile Include="DTO\OnlineOrdering\MenuModels\ItemSideInfo.cs" />
+    <Compile Include="DTO\OnlineOrdering\MenuModels\ItemSizeInfo.cs" />
+    <Compile Include="DTO\OnlineOrdering\MenuModels\ItemSizeTaxProfileInfo.cs" />
+    <Compile Include="DTO\OnlineOrdering\MenuModels\MenuConsumableInfo.cs" />
     <Compile Include="DTO\OnlineOrdering\OrderModels\OrderItemSizeDiscountModel.cs" />
     <Compile Include="DTO\OnlineOrdering\OrderModels\OrderItemSizeTaxProfileModel.cs" />
     <Compile Include="DTO\OnlineOrdering\OrderModels\OrderItemSizeViewModel.cs" />
     <Compile Include="DTO\OnlineOrdering\OrderModels\OrderItemModel.cs" />
     <Compile Include="DTO\OnlineOrdering\OrderModels\SiteOrderTypeInfoModel.cs" />
     <Compile Include="DTO\OnlineOrdering\OrderModels\SiteOrderModel.cs" />
-    <Compile Include="DTO\OnlineOrdering\SideGroupInfo.cs" />
-    <Compile Include="DTO\OnlineOrdering\SiteItemInfo.cs" />
-    <Compile Include="DTO\OnlineOrdering\SiteMenuInfo.cs" />
-    <Compile Include="DTO\OnlineOrdering\SiteTaxSettingsinfo.cs" />
-    <Compile Include="DTO\OnlineOrdering\TaxSettingsInfo.cs" />
+    <Compile Include="DTO\OnlineOrdering\MenuModels\SideGroupInfo.cs" />
+    <Compile Include="DTO\OnlineOrdering\MenuModels\SiteItemInfo.cs" />
+    <Compile Include="DTO\OnlineOrdering\MenuModels\SiteMenuInfo.cs" />
+    <Compile Include="DTO\OnlineOrdering\MenuModels\SiteTaxSettingsinfo.cs" />
+    <Compile Include="DTO\OnlineOrdering\MenuModels\TaxSettingsInfo.cs" />
     <Compile Include="DTO\SalesForce\SalesForceCredentialFactory.cs" />
     <Compile Include="DTO\Wallet Payments\WalletAccount.cs" />
     <Compile Include="DTO\Wallet Payments\WalletTransaction.cs" />
