--- a/MenuMate/Services/ServicesApp/Loyaltymate/Loyaltymate.csproj
+++ b/MenuMate/Services/ServicesApp/Loyaltymate/Loyaltymate.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Model\ApiMemberInvoiceTransactionViewModel.cs" />
     <Compile Include="Model\ApiMembershipProfileViewModel.cs" />
     <Compile Include="Model\ApiMemberViewModel.cs" />
+    <Compile Include="Model\ApiOnlineOrderingResponse.cs" />
     <Compile Include="Model\ApiPocketVoucherUsageRequestViewModel.cs" />
     <Compile Include="Model\ApiPocketVoucherViewModel.cs" />
     <Compile Include="Model\ApiProcessingResult.cs" />
