--- a/SignalR/Client/SystemTrayApp/OnlineOrderingApp.csproj
+++ b/SignalR/Client/SystemTrayApp/OnlineOrderingApp.csproj
@@ -79,7 +79,6 @@
     <Compile Include="ProcessIcon.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utility\LogsUtility.cs" />
     <EmbeddedResource Include="AboutBox.resx">
       <DependentUpon>AboutBox.cs</DependentUpon>
     </EmbeddedResource>
@@ -170,7 +169,9 @@
   <ItemGroup>
     <WCFMetadataStorage Include="Connected Services\OnlineOrdering\" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Utility\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
