--- a/MenuMate/Services/ServicesApp/MenumateServices/MenumateServices.csproj
+++ b/MenuMate/Services/ServicesApp/MenumateServices/MenumateServices.csproj
@@ -194,6 +194,7 @@
     <Compile Include="DTO\Wallet Payments\WalletActionResponse.cs" />
     <Compile Include="Internal Classes\LoyaltyMate\LoyaltyVoucher.cs" />
     <Compile Include="MenumateRunners\AdeynServiceRunner.cs" />
+    <Compile Include="MenumateRunners\MewsIntegrationServiceRunner.cs" />
     <Compile Include="MenumateRunners\PaymentSenseRunner.cs" />
     <Compile Include="MenumateRunners\SiHotIntegrationServiceRunner.cs" />
     <Compile Include="MenumateRunners\SmartConnectRunner.cs" />
@@ -202,6 +203,12 @@
     </Compile>
     <Compile Include="MenumateServiceAdyenIntegration.Designer.cs">
       <DependentUpon>MenumateServiceAdyenIntegration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MenumateServiceMewsIntegration.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="MenumateServiceMewsIntegration.Designer.cs">
+      <DependentUpon>MenumateServiceMewsIntegration.cs</DependentUpon>
     </Compile>
     <Compile Include="MenumateServiceSiHotIntegration.cs">
       <SubType>Component</SubType>
@@ -337,12 +344,14 @@
     <Compile Include="Tools\ServiceNameManager.cs" />
     <Compile Include="WCFServices\AdyenIntegrationWebService.cs" />
     <Compile Include="WCFServices\IAdyenIntegrationWebService.cs" />
+    <Compile Include="WCFServices\IMewsIntegrationWebService.cs" />
     <Compile Include="WCFServices\IPocketVoucherWebService.cs" />
     <Compile Include="WCFServices\ISalesForceIntegrationWebService.cs" />
     <Compile Include="WCFServices\ISiHotIntegrationWebService.cs" />
     <Compile Include="WCFServices\IWCFServicePaymentSense.cs" />
     <Compile Include="WCFServices\IWCFServiceWalletPayments.cs" />
     <Compile Include="WCFServices\IWCFSmartConnect.cs" />
+    <Compile Include="WCFServices\MewsIntegrationWebService.cs" />
     <Compile Include="WCFServices\PocketVoucherWebService.cs" />
     <Compile Include="WCFServices\SalesForceIntegrationWebService.cs" />
     <Compile Include="WCFServices\SiHotIntegrationWebService.cs" />
@@ -402,6 +411,10 @@
     <ProjectReference Include="..\MenumateUtils\MenumateUtils.csproj">
       <Project>{37B0F64A-677E-4AD0-8C04-252BF7A5D3AE}</Project>
       <Name>MenumateUtils</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MewsIntegration\MewsIntegration.csproj">
+      <Project>{73b59aac-6830-49d9-86bd-6e9db74ae8e7}</Project>
+      <Name>MewsIntegration</Name>
     </ProjectReference>
     <ProjectReference Include="..\PaymentSenseIntegration\PaymentSenseIntegration.csproj">
       <Project>{A623C2CE-7E9A-4A72-81DA-7DB377333670}</Project>
