Branch_MM-123186 logs addition..

--- a/MenuMate/Services/ServicesApp/MenumateServices/MenumateServices.csproj
+++ b/MenuMate/Services/ServicesApp/MenumateServices/MenumateServices.csproj
@@ -366,6 +366,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Tools\FileSupplier.cs" />
+    <Compile Include="Tools\FileWriter.cs" />
     <Compile Include="Tools\MenumateServiceLoader.cs" />
     <Compile Include="Tools\MenumateServicesIdentifier.cs" />
     <Compile Include="Tools\ServiceInfo.cs" />
