--- a/Office/Rave5/Rave.ini
+++ b/Office/Rave5/Rave.ini
@@ -8,9 +8,9 @@ Rave Delphi Syntax Compiler=C:\MM_Cloud_Git\V6-Master\Office\Rave5\RvCompiler50.
 Rave Design-time Library=C:\MM_Cloud_Git\V6-Master\Office\Rave5\RvDesign50.bpl
 
 [History]
-ActiveProject=C:\MM_Cloud_Git\V6-Master\Office\Source\Reports\MMReports.rav
-Project0=C:\MM_Cloud_Git\V6-Master\Office\Source\Reports\MMReports.rav
-Project1=
+ActiveProject=C:\V6-Master\Office\Source\Reports\MMReports.rav
+Project0=C:\V6-Master\Office\Source\Reports\MMReports.rav
+Project1=C:\MM_Cloud_Git\V6-Master\Office\Source\Reports\MMReports.rav
 Project2=
 Project3=
 Project4=
@@ -38,7 +38,7 @@ LangFile=
 GridColor=14737632
 DrawGridOnTop=0
 SnapToGrid=0
-GridStyle=3
+GridStyle=0
 FloatPropPrecision=3
 ZoomIncrement=25
 TapDist=0.01
@@ -159,8 +159,8 @@ Visible=1
 
 [Editor]
 State=1
-Height=937
-Width=1288
+Height=953
+Width=1928
 Left=-4
 Top=-4
 PropertyWidth=127
